--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,9 +1,13 @@
 @include mediaXl {
-    
+    .projects {
+        grid-template-columns: repeat(4, 1fr);
+    }
 }
 
 @include mediaLg {
-
+    .projects {
+        grid-template-columns: repeat(3, 1fr);
+    }
 }
 
 @include mediaMd {
@@ -43,10 +47,24 @@
             height: 150px;
         }
     }
+
+    .about-info {
+        grid-template-areas: 'bio-image' 'bio' 'job1' 'job2' 'job3';
+
+        grid-template-columns: 1fr;
+    }
+
+    .projects {
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
 
 @include mediaSm {
     main#home h1 {
         margin-top: 10vh;
+    }
+
+    .projects {
+        grid-template-columns: 1fr;
     }
 }
