--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,163 +1,186 @@
-@import 'config';
-@import 'menu';
-
+@import "config";
+@import "menu";
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    @include background;
-    background-color: $primary-color;
-    color: set-text-color($primary-color);
-    height: 100%;
-    margin: 0;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    line-height: 1.5;
+  @include background;
+  background-color: $primary-color;
+  color: set-text-color($primary-color);
+  height: 100%;
+  margin: 0;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  line-height: 1.5;
 }
 
 //Heading
-h1, h2, h3 {
-    margin: 0;
-    font-weight: 400;
+h1,
+h2,
+h3 {
+  margin: 0;
+  font-weight: 400;
 
-    &.lg-heading {
-        font-size: 6rem;
-    }
+  &.lg-heading {
+    font-size: 6rem;
+  }
 
-    &.sm-heading {
-        margin-bottom: 2rem;
-        padding: 0.2rem 1rem;
-        background: rgba(lighten($primary-color, 2), 0.5);
-    }
+  &.sm-heading {
+    margin-bottom: 2rem;
+    padding: 0.2rem 1rem;
+    background: rgba(lighten($primary-color, 2), 0.5);
+  }
 }
 
 a {
-    color: #ffffff;
-    text-decoration: none;
+  color: #ffffff;
+  text-decoration: none;
 }
 
 header {
-    position: fixed;
-    z-index: 2;
-    width: 100%;
-
+  position: fixed;
+  z-index: 2;
+  width: 100%;
 }
 
 .text-secondary {
-    color: $secondary-color;
+  color: $secondary-color;
 }
 
 main {
-    padding: 4rem;
-        // height: 100%;
-    min-height: calc(100vh - 60px);
+  padding: 4rem;
+  // height: 100%;
+  min-height: calc(100vh - 60px);
 
-    .icons {
-        margin-top: 1rem;
-        a {
-            padding: 0.4rem;
+  .icons {
+    margin-top: 1rem;
+    a {
+      padding: 0.4rem;
 
-            &:hover {
-                color: $secondary-color;
-                @include easeout();
-            }
-        }
+      &:hover {
+        color: $secondary-color;
+        @include easeout();
+      }
     }
+  }
 
-    &#home {
-        overflow: hidden;
-        h1 {
-            margin-top: 20vh;
-        }
+  &#home {
+    overflow: hidden;
+    h1 {
+      margin-top: 20vh;
     }
-
+  }
 }
 
 .about-info {
-    display: grid;
-    grid-gap: 30px;
-    grid-template-areas: 'bio-image bio bio' 'job1 job2 job3';
-    grid-template-columns: repeat(3, 1fr);
+  display: grid;
+  grid-gap: 30px;
+  grid-template-areas: "bio-image bio bio" "job1 job2 job3";
+  grid-template-columns: repeat(3, 1fr);
 }
 
 .bio-image {
-    grid-area: bio-image;
-    margin: auto;
-    border-radius: 50%;
-    border: $secondary-color 3px solid;
+  grid-area: bio-image;
+  margin: auto;
+  border-radius: 50%;
+  border: $secondary-color 3px solid;
 }
 
 .bio {
-    grid-area: bio;
+  grid-area: bio;
 }
 
 .job-1 {
-    grid-area: job1
+  grid-area: job1;
 }
 .job-2 {
-    grid-area: job2
+  grid-area: job2;
 }
 .job-3 {
-    grid-area: job3
+  grid-area: job3;
 }
 
 .job {
-    background: lighten($primary-color, 5);
-    padding: 0.5rem;
-    border-bottom: $secondary-color 5px solid;
+  background: lighten($primary-color, 5);
+  padding: 0.5rem;
+  border-bottom: $secondary-color 5px solid;
 }
 
 // Work/Projects page
 .projects {
-    display: grid;
-    grid-gap: 0.7rem;
-    grid-template-columns: repeat(3, 1fr);
+  display: grid;
+  grid-gap: 0.7rem;
+  grid-template-columns: repeat(3, 1fr);
 
-    img {
-        width: 100%;
-        border: 3px #ffffff solid;
+  img {
+    width: 100%;
+    border: 3px #ffffff solid;
 
-        &:hover {
-            opacity: 0.5;
-            border-color: $secondary-color;
-            @include easeout;
-        }
+    &:hover {
+      opacity: 0.5;
+      border-color: $secondary-color;
+      @include easeout;
     }
+  }
+}
+
+// contact page
+.boxes {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-top: 1rem;
+
+  div {
+    font-size: 2rem;
+    border: 3px #ffffff solid;
+    padding: 1.5rem 2.5rem;
+    margin-bottom: 3rem;
+    @include easeout;
+
+    &:hover {
+      padding: 0.5rem 1.5rem;
+      background: $secondary-color;
+      color: set-text-color($secondary-color);
+      span {
+        color: set-text-color($secondary-color);
+      }
+    }
+  }
 }
 
 // button styles
 .btn {
-    display: block;
-    padding: 0.5rem 1rem;
-    border: 0;
-    margin-bottom: 0.3rem;
+  display: block;
+  padding: 0.5rem 1rem;
+  border: 0;
+  margin-bottom: 0.3rem;
 
-    &:hover {
-        background: $secondary-color;
-        color: set-text-color($secondary-color);
-
-    }
+  &:hover {
+    background: $secondary-color;
+    color: set-text-color($secondary-color);
+  }
 }
 
 .btn-dark {
-    @extend .btn;
-    background: darken($primary-color, 50);
-    color: #ffffff;
+  @extend .btn;
+  background: darken($primary-color, 50);
+  color: #ffffff;
 }
 .btn-light {
-    @extend .btn;
-    background: lighten($primary-color, 50);
-    color: #ffffff;
+  @extend .btn;
+  background: lighten($primary-color, 50);
+  color: #ffffff;
 }
 
 #main-footer {
-    text-align: center;
-    padding: 1rem;
-    background: darken($primary-color, 10);
-    color: set-text-color($primary-color);
-    height: 60px;
+  text-align: center;
+  padding: 1rem;
+  background: darken($primary-color, 10);
+  color: set-text-color($primary-color);
+  height: 60px;
 }
 
-
-@import 'mobile';
+@import "mobile";
